# qbit

./: .gitignore  Dockerfile  Dockerfile.cpu  ENV.md  README.Docker.md  README.md  api_connection.py  compose.yaml  main.py  output.json  pull.sh  pyproject.toml  qbit.py  requirements.txt  run.sh  search_results_dict.json  torrent_info.json
.github/workflows/: pipeline.yml
samples/: AttributeDict.py  TorrentDictionary.json
src/: api.py  api_connection.py  crypt.py  main.py  qbit.py
